--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,16 @@ jobs:
           python-version: ${{ matrix.python-version }}
       
       - name: Install dependencies
+        env:
+          AIRFLOW_VERSION: 2.9.1
         run: |
           python -m pip install --upgrade pip
-          pip install -r bq-job-optimizer-airflow-2/test_requirements.txt
-          pip install apache-airflow-providers-google==15.1.0 --no-deps
-          pip install google-auth-httplib2 google-api-python-client pandas-gbq gcloud-aio-bigquery gcloud-aio-storage google-cloud-secret-manager google-cloud-storage
+          PY_VERSION=$(python -c "import sys; print(f'{sys.version_info[0]}.{sys.version_info[1]}')")
+          CONSTRAINT_URL="https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${PY_VERSION}.txt"
+          echo "Using constraint file: ${CONSTRAINT_URL}"
+          pip install "apache-airflow==${AIRFLOW_VERSION}" --constraint "${CONSTRAINT_URL}"
+          pip install -r bq-job-optimizer-airflow-2/test_requirements.txt --constraint "${CONSTRAINT_URL}"
+          pip install --constraint "${CONSTRAINT_URL}" google-auth-httplib2 google-api-python-client pandas-gbq gcloud-aio-bigquery gcloud-aio-storage google-cloud-secret-manager google-cloud-storage
       
       - name: Set up Airflow
         run: |
