--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,14 @@ updates:
       - "dependencies"
     schedule:
       interval: "daily"
+    groups:
+      patch-updates:
+        update-types:
+          - "patch"
+      non-patch-updates:
+        update-types:
+          - "minor"
+          - "major"
     commit-message:
       prefix: "chore: "
     target-branch: "master"
@@ -16,6 +24,14 @@ updates:
       - "dependencies"
     schedule:
       interval: "daily"
+    groups:
+      patch-updates:
+        update-types:
+          - "patch"
+      non-patch-updates:
+        update-types:
+          - "minor"
+          - "major"
     commit-message:
       prefix: "chore: "
     target-branch: "master"
@@ -26,6 +42,14 @@ updates:
       - "dependencies"
     schedule:
       interval: "daily"
+    groups:
+      patch-updates:
+        update-types:
+          - "patch"
+      non-patch-updates:
+        update-types:
+          - "minor"
+          - "major"
     commit-message:
       prefix: "chore: "
     target-branch: "master"
